--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "autoprefixer": "^10.4.19",
     "firebase": "^10.12.2",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.344.0",
     "next": "14.0.2",
@@ -26,6 +27,7 @@
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.11.16",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^18.2.60",
